--- a/StarFauxGL.vcxproj
+++ b/StarFauxGL.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Source\Entity.cpp" />
     <ClCompile Include="Source\Main.cpp" />
     <ClCompile Include="Source\Arwing.cpp" />
     <ClCompile Include="Source\Camera.cpp" />
@@ -34,11 +35,13 @@
     <ClCompile Include="Source\StringUtil.cpp" />
     <ClCompile Include="Source\Texture.cpp" />
     <ClCompile Include="Source\Util.cpp" />
+    <ClCompile Include="Source\World.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Arwing.h" />
     <ClInclude Include="Source\Camera.h" />
     <ClInclude Include="Source\CImage.h" />
+    <ClInclude Include="Source\Entity.h" />
     <ClInclude Include="Source\FileUtil.h" />
     <ClInclude Include="Source\Font.h" />
     <ClInclude Include="Source\Mesh.h" />
@@ -51,6 +54,7 @@
     <ClInclude Include="Source\Texture.h" />
     <ClInclude Include="Source\Types.h" />
     <ClInclude Include="Source\Util.h" />
+    <ClInclude Include="Source\World.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
